# hidock-cli

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  GEMINI.md  Hidock.html  LICENSE  QUICK_START.md  README.md  REFERENCE_HIDOCK.md  cleanup.bat  cleanup.sh  config_and_logger.py  constants.py  ctk_custom_widgets.py  gui_main_window.py  hidock_config.json  hidock_device.py  hidock_fix.py  hidock_list.py  hidock_main.py  hidock_tool.py  hidock_tool_config.json  main.py  requirements.txt  setup-precommit.bat  setup-precommit.sh  setup-unix.sh  setup-windows.bat  setup.py  test-commit.md  test_visualization_fix.py  transcription_module.py
.claude/: settings.local.json
.claude/agents/: dev-onboarding-expert.md  dev-onboarding-junior.md  devops-pipeline-engineer.md
.github/: 70904b39-a522-41f7-ad7c-39369a05ffa6  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  de09b7f0-bc06-4bc0-8568-16fc20e86f0a  f4a86120-810f-4cd9-9942-6906fcd32c54  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-web.yml  labeler.yml  release.yml
audio-insights-extractor/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts
audio-insights-extractor/components/: AudioInput.tsx  ErrorMessage.tsx  IconComponents.tsx  InsightsDisplay.tsx  LoadingSpinner.tsx  TranscriptionDisplay.tsx
audio-insights-extractor/services/: geminiService.ts
docs/: AGENT_DEFAULT.md  API.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_REVIEW_REPORT.md  DevAgent.md  PRE-COMMIT.md  REFERENCE_HIDOCK.md  ROADMAP.md  SETUP.md  TECHNICAL_SPECIFICATION.md  TESTING.md  TROUBLESHOOTING.md  TestAgent.md
hidock-desktop-app/: .flake8  AGENT.md  README.md  ai_service.py  audio_player.py  audio_player_enhanced.py  audio_processing_advanced.py  audio_visualization.py  config_and_logger.py  constants.py  ctk_custom_widgets.py  desktop_device_adapter.py  device_actions_mixin.py  device_interface.py  enhanced_device_selector.py  enhanced_gui_integration.py  file_actions_mixin.py  file_operations_manager.py  flake8_issues.txt  gui_actions_device.py  gui_actions_file.py  gui_auxiliary.py  gui_event_handlers.py  gui_main_window.py  gui_treeview.py  hidock.js  hidock_cli.py  hidock_config.json  hidock_device.py  hta_converter.py  main.py  pyproject.toml  pytest.ini  requirements.txt  settings_window.py  storage_management.py  test_unified_interface.py  transcription_module.py  tree_view_mixin.py
hidock-desktop-app/docs/: BUG_LIST.md  CodeReview.md  DesktopGUI_refactor.md  FEATURE_REQUESTS.md  SECURITY_LIST.md  enhancement_plan.md  test_coverage.md
hidock-desktop-app/tests/: conftest.py  test_audio_player.py  test_device_communication.py  test_file_operations.py  test_gui_components.py  test_main.py  test_transcription.py
hidock-desktop-app/themes/: README.md
hidock-desktop-app/themes/theme/: dark.tcl  light.tcl
hidock-web-app/: .env.example  .eslintrc.cjs  .gitignore  AGENT.md  README.md  SECURITY_LIST.md  index.html  jensen-complete.js  jensen.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
hidock-web-app/docs/: FEATURE_LIST.md
hidock-web-app/src/: App.tsx  index.css  vite-env.d.ts
hidock-web-app/src/adapters/: webDeviceAdapter.ts
hidock-web-app/src/components/: ErrorBoundary.tsx  Toast.tsx
hidock-web-app/src/constants/: index.ts
hidock-web-app/src/hooks/: useDeviceConnection.ts
hidock-web-app/src/interfaces/: deviceInterface.ts
hidock-web-app/src/pages/: Dashboard.tsx  Recordings.tsx  Settings.tsx  Transcription.tsx
hidock-web-app/src/services/: audioProcessingService.ts  deviceService.ts  geminiService.ts
hidock-web-app/src/store/: useAppStore.ts
scripts/: setup-dev.py
(+24 files in other folders)
